--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 	<div class="cool container" id="somethingcool">
-		<h2 id="heading">Something Cool</h2>
+		<h2 id="heading">React 2048</h2>
 		<div id="react-container"></div>
 	</div>
 </body>
